Fix position of hd badge on mobile

--- a/www/css/media.css
+++ b/www/css/media.css
@@ -109,6 +109,7 @@
 	#playbar-volume-popup-btn {width:initial!important;}
 	/*#extra-tags-display {display:none;}*/
 	#db-path {display:none;}
+	.playback-hd-badge {top:1.35rem;}
 }
 
 /* Smaller portrait for small screens */
